k8s/001-dotnet-todoapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-todoapi
  namespace: apm-apps
spec:
  selector:
    matchLabels:
      app: dotnet-todoapi
  template:
    metadata:
      labels:
        app: dotnet-todoapi
    spec:
      containers:
      - name: dotnet-todoapi
        image: ambrosiaaaaa/apm-dotnet:v0.0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-todoapi
  namespace: apm-apps
spec:
  type: ClusterIP
  selector:
    app: dotnet-todoapi
  ports:
  - name: http
    port: 8081
    targetPort: 80
