k8s/002-java-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-spring
  namespace: apm-apps
  labels:
    tags.datadoghq.com/env: "apm-apps"
    tags.datadoghq.com/service: "java-spring"
    tags.datadoghq.com/version: "v1.0.0"
spec:
  selector:
    matchLabels:
      app: java-spring
  template:
    metadata:
      labels:
        app: java-spring
        tags.datadoghq.com/env: "apm-apps"   # env
        tags.datadoghq.com/service: "java-spring"
        tags.datadoghq.com/version: "v1.0.0"
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: "v1.49.0"
    spec:
      containers:
      - name: java-spring
        image: ambrosiaaaaa/apm-java:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: java-spring
  namespace: apm-apps
spec:
  type: ClusterIP
  selector:
    app: java-spring
  ports:
  - name: http
    port: 8083
    targetPort: 8080
