k8s/003-python-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask
  namespace: apm-apps
spec:
  selector:
    matchLabels:
      app: python-flask
  template:
    metadata:
      labels:
        app: python-flask
    spec:
      containers:
      - name: python-flask
        image: ambrosiaaaaa/apm-python:v0.0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: python-flask
  namespace: apm-apps
spec:
  type: ClusterIP
  selector:
    app: python-flask
  ports:
  - name: http
    port: 8082
    targetPort: 5000
